# face_feature

./: CMakeLists.txt  README.md  package.xml
launch/: driver_face.launch
msg/: DriverIdMsg.msg  FacePicMsg.msg  FaceRecMsg.msg  ResultMsg.msg
src/: analyze.cpp  decode.cpp  generateFeature.cpp  getDriverId.cpp  identify.cpp  render.cpp
src/arcface/: arcface.cpp  arcface.h  draw_mask.cpp  draw_mask.h  face_similarity.cu  identify.cpp  identify.h  prelu.cu  prelu.h
src/data/: face_cap_name.txt  face_data.db  face_pic_name.txt  results.cpp  results.h
src/database/: SqliteOp.cpp  SqliteOp.h
src/font/: CvxText.cpp  CvxText.h
src/gst/: gst_decode.cpp  gst_decode.h
src/pfld/: face_gesture.cpp  face_gesture.h  pfld.cpp  pfld.h
src/res/: cfg.xml  face.data  facemap.txt
src/utils/: cfg_params.cpp  cfg_params.h  communicate.cpp  communicate.h  dataset.cpp  dataset.h  faceId_match.cpp  faceId_match.h  logging.h  time_tool.cpp  time_tool.h  utils.h
src/yolov5/: common.cpp  common.h  yololayer.cu  yololayer.h  yolov5.cpp  yolov5.h
